# nvlp

./: Cargo.toml  README.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
cli/src/commands/: keys.rs  mod.rs  open.rs
core/: Cargo.toml
core/src/testdata/: test_id_ed25519  test_rsa
envelop-cli/: Cargo.toml
envelop-cli/src/: cli.rs  main.rs
envelop-cli/src/commands/: encrypt.rs  keys.rs  mod.rs  open.rs  send.rs
envelop-core/: Cargo.toml
envelop-core/src/: archive.rs  crypto.rs  github.rs  lib.rs
envelop-core/src/crypto/: mod.rs
envelop-core/src/testdata/: test_id_ed25519.pub  test_rsa.pub
nvlp/: Cargo.toml
nvlp-core/: Cargo.toml
nvlp-core/src/: archive.rs  crypto.rs  error.rs  github.rs  lib.rs
nvlp-core/src/testdata/: test_id_ed25519.pub  test_rsa.pub
nvlp/src/: cli.rs  main.rs
nvlp/src/commands/: decrypt.rs  encrypt.rs  mod.rs  open.rs  send.rs
