[package]
name = "nvlp-core"
version = "0.3.1"
edition = "2024"
description = "Core library for nvlp: encrypt files to GitHub users via their SSH keys"
license = "MIT"
repository = "https://github.com/michalpielka/nvlp"
keywords = ["encryption", "age", "ssh", "github", "security"]
categories = ["cryptography", "authentication"]

[dependencies]
age = { version = "0.11.2", features = ["armor", "ssh"] }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
