[package]
name = "envelop-core"
version = "0.1.0"
edition = "2024"

[dependencies]
age = { version = "0.11.2", features = ["armor", "ssh"] }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.45"
thiserror = "2.0.18"
