[package]
name = "nvlp"
version = "0.3.0"
edition = "2024"
description = "Encrypt files to GitHub users via their SSH keys"
license = "MIT"
repository = "https://github.com/michalpielka/nvlp"
readme = "../README.md"
keywords = ["encryption", "age", "ssh", "github", "security"]
categories = ["cryptography", "command-line-utilities", "authentication"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
nvlp-core = { version = "0.3.0", path = "../nvlp-core" }
